# helix

./: .gitignore  AGENTS.md  CLAUDE.md  Helix.sln  LICENSE  README.md  TASK.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/chatmodes/: Planning.chatmode.md
.github/workflows/: ci.yml
.helix/: settings.json
docs/architecture/: 01-introduction-and-goals.md  01-introduction.md  02-constraints.md  02-solution-strategy.md  03-building-blocks.md  03-context-and-scope.md  04-runtime-view.md  04-solution-strategy.md  05-building-block-view.md  05-quality.md  README.md
docs/features/: 001-main-layout-vue-shadcn.spec.md
docs/user/: README.md  prompts.md  quickstart.md  safety.md  settings.md
src/Helix/: .gitignore  GlobalUsings.cs  Helix.csproj  Logo.txt  Program.cs  appsettings.Development.json  appsettings.json
src/Helix/Agent/: AgentInstructions.cs  CodingAgent.cs  CodingAgentContext.cs  CodingAgentFactory.cs  CodingAgentOptions.cs  GenerationStatus.cs  IAgentInstructions.cs  ICodingAgentCallbacks.cs  ICodingAgentFactory.cs
src/Helix/Agents/: CodingAgent.cs  CodingAgentCallContext.cs
src/Helix/ClientApp/: .env.example  AGENTS.md  (+9 more)
src/helix/: __init__.py  cli.py  gui.py  ollama.py  prompts.py  settings.py
test/Helix.Tests/: CodingAgentHubTests.cs  CodingAgentTests.cs  ConversationInfoTests.cs  Helix.Tests.csproj  ShellCommandParserTests.cs  ShellPluginTests.cs  TextEditorPluginTests.cs  UnitTest1.cs
tests/: __init__.py  test_agent.py  test_gui_interrupt.py  test_gui_prompts.py  test_prompts.py  test_settings.py  test_tools.py
(+106 files in other folders)
