[project]
name = "helix-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Willem Meints", email = "1550763+wmeints@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chevron>=0.14.0",
    "click>=8.1.0",
    "langchain-core>=1.1.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.4",
    "python-frontmatter>=1.1.0",
    "rich>=14.2.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
helix = "helix.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helix"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
]
